--- a/info/TODO.txt
+++ b/info/TODO.txt
@@ -15,11 +15,9 @@
     
             X Movie.java X --- a. Create a Movie class with the following attributes: title, release date, unique ID, Rotten Tomatoes score, and availability status.
       
-        b. Implement a Binary Search Tree to store movie records sorted by release date, ensuring less than O(n) access time.
-      
-        c. Use a Hashtable to store movies by ID, allowing quick access in less than O(n) runtime.
-      
-        d. Maintain a PriorityQueue for the least rated available movies, ensuring constant time access and less than O(n) time for add/delete operations.
+            X MovieBinarySearchTree.java X --- b. Implement a Binary Search Tree to store movie records 
+        
+	d. Maintain a PriorityQueue for the least rated available movies, ensuring constant time access and less than O(n) time for add/delete operations.
       
         e. Implement a LinkedList to store all movies in order of release date for printing.
 
