Revert "Merge branch 'main' of https://github.com/russellkosovsky/com-212-final"
This reverts commit 356dc864bf3f5f2aec4f29def534285dc24be6d2, reversing
changes made to c84f801d4e72ef0551b63fe645bd5d9f6b869fdd.

--- a/info/TODO.txt
+++ b/info/TODO.txt
@@ -15,9 +15,11 @@
     
             X Movie.java X --- a. Create a Movie class with the following attributes: title, release date, unique ID, Rotten Tomatoes score, and availability status.
       
-            X MovieBinarySearchTree.java X --- b. Implement a Binary Search Tree to store movie records 
-        
-	d. Maintain a PriorityQueue for the least rated available movies, ensuring constant time access and less than O(n) time for add/delete operations.
+        b. Implement a Binary Search Tree to store movie records sorted by release date, ensuring less than O(n) access time.
+      
+        c. Use a Hashtable to store movies by ID, allowing quick access in less than O(n) runtime.
+      
+        d. Maintain a PriorityQueue for the least rated available movies, ensuring constant time access and less than O(n) time for add/delete operations.
       
         e. Implement a LinkedList to store all movies in order of release date for printing.
 
